@@ -1,6 +1,5 @@
 package io.quarkus.qute;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -11,7 +10,9 @@ import java.util.function.BiConsumer;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
 
+import io.quarkus.qute.SectionHelperFactory.SectionInitContext;
 import io.quarkus.qute.Template.Fragment;
+import io.quarkus.qute.TemplateNode.Origin;
 
 public class IncludeSectionHelper implements SectionHelper {
 
@@ -19,14 +20,14 @@ public class IncludeSectionHelper implements SectionHelper {
     private static final String TEMPLATE = "template";
     private static final Map<String, Object> FRAGMENT_PARAMS = Map.of(Template.Fragment.ATTRIBUTE, true);
 
-    protected final Supplier<Template> template;
+    protected final TemplateSupplier templateSupplier;
     protected final Map<String, SectionBlock> extendingBlocks;
     protected final Map<String, Expression> parameters;
     protected final boolean isIsolated;
 
-    public IncludeSectionHelper(Supplier<Template> templateSupplier, Map<String, SectionBlock> extendingBlocks,
+    IncludeSectionHelper(TemplateSupplier templateSupplier, Map<String, SectionBlock> extendingBlocks,
             Map<String, Expression> parameters, boolean isIsolated) {
-        this.template = templateSupplier;
+        this.templateSupplier = templateSupplier;
         this.extendingBlocks = extendingBlocks;
         this.parameters = parameters;
         this.isIsolated = isIsolated;
@@ -36,8 +37,8 @@ public class IncludeSectionHelper implements SectionHelper {
     public CompletionStage<ResultNode> resolve(SectionResolutionContext context) {
         if (parameters.isEmpty() && optimizeIfNoParams()) {
             // No params
-            Template t = template.get();
-            SectionNode root = t.getRootNode();
+            Template template = templateSupplier.get(Map.of());
+            SectionNode root = template.getRootNode();
             ResolutionContext resolutionContext;
             if (isIsolated) {
                 resolutionContext = context.newResolutionContext(null, extendingBlocks);
@@ -47,7 +48,7 @@ public class IncludeSectionHelper implements SectionHelper {
             } else {
                 resolutionContext = context.resolutionContext().createChild(null, extendingBlocks);
             }
-            return root.resolve(resolutionContext, t.isFragment() ? FRAGMENT_PARAMS : null);
+            return root.resolve(resolutionContext, template.isFragment() ? FRAGMENT_PARAMS : null);
         } else {
             CompletableFuture<ResultNode> result = new CompletableFuture<>();
             context.evaluate(parameters).whenComplete((evaluatedParams, t1) -> {
@@ -57,17 +58,18 @@ public class IncludeSectionHelper implements SectionHelper {
                     addAdditionalEvaluatedParams(context, evaluatedParams);
                     try {
                         ResolutionContext resolutionContext;
-                        // Execute the template with the params as the root context object
                         Object data = Mapper.wrap(evaluatedParams);
                         if (isIsolated) {
                             resolutionContext = context.newResolutionContext(data, extendingBlocks);
                         } else {
                             resolutionContext = context.resolutionContext().createChild(data, extendingBlocks);
                         }
-                        Template t = template.get();
-                        SectionNode root = ((TemplateImpl) t).root;
+
+                        Template template = templateSupplier.get(evaluatedParams);
+                        SectionNode root = template.getRootNode();
+
                         // Execute the template with the params as the root context object
-                        root.resolve(resolutionContext, t.isFragment() ? FRAGMENT_PARAMS : null)
+                        root.resolve(resolutionContext, template.isFragment() ? FRAGMENT_PARAMS : null)
                                 .whenComplete((resultNode, t2) -> {
                                     if (t2 != null) {
                                         result.completeExceptionally(t2);
@@ -102,6 +104,8 @@ public class IncludeSectionHelper implements SectionHelper {
 
     public static class Factory extends AbstractIncludeFactory<IncludeSectionHelper> {
 
+        static final String DYNAMIC_ID = "_id";
+
         @Override
         public List<String> getDefaultAliases() {
             return ImmutableList.of("include");
@@ -109,7 +113,15 @@ public class IncludeSectionHelper implements SectionHelper {
 
         @Override
         public ParametersInfo getParameters() {
-            ParametersInfo.Builder builder = ParametersInfo.builder().addParameter(TEMPLATE);
+            ParametersInfo.Builder builder = ParametersInfo.builder()
+                    .addParameter(Parameter.builder(TEMPLATE)
+                            .optional()
+                            .valuePredicate(this::skipBuiltInParam)
+                            .build())
+                    .addParameter(Parameter.builder(DYNAMIC_ID)
+                            .optional()
+                            .valuePredicate(this::skipBuiltInParam)
+                            .build());
             addDefaultParams(builder);
             return builder.build();
         }
@@ -120,7 +132,8 @@ public class IncludeSectionHelper implements SectionHelper {
         }
 
         @Override
-        protected boolean ignoreParameterInit(Supplier<String> firstParamSupplier, String key, String value) {
+        protected boolean ignoreParameterInit(Map<String, String> params, Supplier<String> firstParamValue, String key,
+                String value) {
             return key.equals(TEMPLATE)
                     // {#include foo _isolated=true /}
                     || key.equals(ISOLATED)
@@ -136,7 +149,13 @@ public class IncludeSectionHelper implements SectionHelper {
 
         @Override
         protected String getTemplateId(SectionInitContext context) {
+            if (context.getParameters().containsKey(DYNAMIC_ID)) {
+                return null;
+            }
             String templateParam = context.getParameter(TEMPLATE);
+            if (templateParam == null) {
+                throw context.error("Neither the template id nor the template name was specified").build();
+            }
             if (LiteralSupport.isStringLiteralSeparator(templateParam.charAt(0))) {
                 templateParam = templateParam.substring(1, templateParam.length() - 1);
             }
@@ -144,9 +163,9 @@ public class IncludeSectionHelper implements SectionHelper {
         }
 
         @Override
-        protected IncludeSectionHelper newHelper(Supplier<Template> template, Map<String, Expression> params,
+        protected IncludeSectionHelper newHelper(TemplateSupplier templateSupplier, Map<String, Expression> params,
                 Map<String, SectionBlock> extendingBlocks, Boolean isolatedValue, SectionInitContext context) {
-            return new IncludeSectionHelper(template, extendingBlocks, params, isolatedValue != null ? isolatedValue
+            return new IncludeSectionHelper(templateSupplier, extendingBlocks, params, isolatedValue != null ? isolatedValue
                     : Boolean.parseBoolean(context.getParameterOrDefault(ISOLATED, Boolean.FALSE.toString())));
         }
 
@@ -170,21 +189,35 @@ public class IncludeSectionHelper implements SectionHelper {
 
         void addDefaultParams(ParametersInfo.Builder builder) {
             builder
-                    .addParameter(Parameter.builder(ISOLATED).defaultValue(isolatedDefaultValue()).optional()
-                            .valuePredicate(ISOLATED::equals).build())
-                    .addParameter(Parameter.builder(UNISOLATED).optional().valuePredicate(UNISOLATED::equals).build())
-                    .addParameter(Parameter.builder(IGNORE_FRAGMENTS).defaultValue(Boolean.FALSE.toString()).optional()
-                            .valuePredicate(IGNORE_FRAGMENTS::equals).build())
+                    .addParameter(Parameter.builder(ISOLATED)
+                            .defaultValue(isolatedDefaultValue())
+                            .optional()
+                            .valuePredicate(ISOLATED::equals)
+                            .build())
+                    .addParameter(Parameter.builder(UNISOLATED)
+                            .optional()
+                            .valuePredicate(UNISOLATED::equals)
+                            .build())
+                    .addParameter(Parameter.builder(IGNORE_FRAGMENTS)
+                            .defaultValue(Boolean.FALSE.toString())
+                            .optional()
+                            .valuePredicate(IGNORE_FRAGMENTS::equals)
+                            .build())
                     .build();
+        }
+
+        protected boolean skipBuiltInParam(String value) {
+            return value != null && !value.startsWith("_");
         }
 
         @Override
         public Scope initializeBlock(Scope outerScope, BlockInfo block) {
             if (block.getLabel().equals(MAIN_BLOCK_NAME)) {
-                for (Entry<String, String> entry : block.getParameters().entrySet()) {
+                Map<String, String> params = block.getParameters();
+                for (Entry<String, String> entry : params.entrySet()) {
                     String key = entry.getKey();
                     String value = entry.getValue();
-                    handleParam(key, value, () -> block.getParameter(0), (k, v) -> block.addExpression(k, v));
+                    processParam(params, key, value, () -> block.getParameter(0), (k, v) -> block.addExpression(k, v));
                 }
                 return outerScope;
             } else {
@@ -200,7 +233,7 @@ public class IncludeSectionHelper implements SectionHelper {
             Map<String, SectionBlock> extendingBlocks;
 
             if (isEmpty) {
-                extendingBlocks = Collections.emptyMap();
+                extendingBlocks = Map.of();
             } else {
                 extendingBlocks = new HashMap<>();
                 for (SectionBlock block : context.getBlocks()) {
@@ -215,112 +248,51 @@ public class IncludeSectionHelper implements SectionHelper {
                 }
             }
 
-            Map<String, Expression> params;
-            if (context.getParameters().size() == 1) {
-                params = Collections.emptyMap();
-            } else {
-                params = new HashMap<>();
-                for (Entry<String, String> entry : context.getParameters().entrySet()) {
-                    String key = entry.getKey();
-                    String value = entry.getValue();
-                    if (value.equals(ISOLATED)) {
-                        isolatedValue = true;
-                        continue;
-                    } else if (value.equals(UNISOLATED)) {
-                        isolatedValue = false;
-                        continue;
-                    }
-                    if (value.equals(IGNORE_FRAGMENTS)) {
-                        ignoreFragments = true;
-                        continue;
-                    }
-                    handleParam(key, value, () -> context.getParameter(0), (k, v) -> params.put(k, context.getExpression(k)));
+            Map<String, Expression> params = new HashMap<>();
+            Map<String, String> contextParams = context.getParameters();
+            for (Entry<String, String> entry : contextParams.entrySet()) {
+                String key = entry.getKey();
+                String value = entry.getValue();
+                if (value.equals(ISOLATED)) {
+                    // {#include foo _isolated /}
+                    isolatedValue = true;
+                    continue;
+                } else if (value.equals(UNISOLATED)) {
+                    // {#include foo _unisolated /}
+                    isolatedValue = false;
+                    continue;
                 }
+                if (value.equals(IGNORE_FRAGMENTS)) {
+                    // {#include foo _ignoreFragments /}
+                    ignoreFragments = true;
+                    continue;
+                }
+                processParam(contextParams, key, value, () -> context.getParameter(0),
+                        (k, v) -> params.put(k, context.getExpression(k)));
             }
 
-            // foo - no fragment
-            // foo$bar - template "foo" and fragment "bar"
-            // $fragment_01 - current template and fragment "fragment_01"
+            // null - dynamic lookup is needed
+            // "foo" - no fragment
+            // "foo$bar" - template "foo" and fragment "bar"
+            // "$fragment_01" - current template and fragment "fragment_01"
             String templateId = getTemplateId(context);
-
-            //
-            if (!ignoreFragments) {
-                ignoreFragments = Boolean.parseBoolean(context.getParameterOrDefault(IGNORE_FRAGMENTS, "false"));
-            }
-            final String fragmentId = ignoreFragments ? null : getFragmentId(templateId, context);
-            Supplier<Template> currentTemplate;
-            if (fragmentId != null) {
-                // remove the trailing fragment part
-                templateId = templateId.substring(0, templateId.lastIndexOf('$'));
-                if (templateId.isEmpty()) {
-                    // use the current template
-                    currentTemplate = context.getCurrentTemplate();
-                } else {
-                    currentTemplate = null;
-                }
-            } else {
-                currentTemplate = null;
-            }
-            final String finalTemplateId = templateId;
-
-            final Engine engine = context.getEngine();
-            Supplier<Template> template = new Supplier<Template>() {
-                @Override
-                public Template get() {
-                    Template template;
-                    if (currentTemplate != null) {
-                        template = currentTemplate.get();
-                    } else {
-                        template = engine.getTemplate(finalTemplateId);
-                    }
-                    if (template == null) {
-                        throw engine.error("included template [{templateId}] not found")
-                                .code(Code.TEMPLATE_NOT_FOUND)
-                                .argument("templateId", finalTemplateId)
-                                .origin(context.getOrigin())
-                                .build();
-                    }
-                    if (fragmentId != null) {
-                        Fragment fragment = template.getFragment(fragmentId);
-                        if (fragment == null) {
-                            throw engine.error("fragment [{fragmentId}] not found in the included template [{templateId}]")
-                                    .code(Code.FRAGMENT_NOT_FOUND)
-                                    .argument("templateId", finalTemplateId)
-                                    .argument("fragmentId", fragmentId)
-                                    .origin(context.getOrigin())
-                                    .build();
-                        }
-                        template = fragment;
-                    }
-                    return template;
-                }
-            };
-            return newHelper(template, params, extendingBlocks, isolatedValue, context);
+            TemplateSupplier templateSupplier = templateId != null
+                    ? new FixedTemplateSupplier(context, ignoreFragments, templateId)
+                    : new DynamicTemplateSupplier(context, ignoreFragments);
+            return newHelper(templateSupplier, params, extendingBlocks, isolatedValue,
+                    context);
         }
 
+        /**
+         *
+         * @param context
+         * @return {@code null} if dynamic lookup is needed
+         */
         protected abstract String getTemplateId(SectionInitContext context);
 
-        protected String getFragmentId(String templateId, SectionInitContext context) {
-            int idx = templateId.lastIndexOf('$');
-            if (idx != -1) {
-                // the part after the last occurence of a dollar sign is the fragment identifier
-                String fragmentId = templateId.substring(idx + 1, templateId.length());
-                if (FragmentSectionHelper.Factory.FRAGMENT_PATTERN.matcher(fragmentId).matches()) {
-                    return fragmentId;
-                } else {
-                    throw context.getEngine().error("invalid fragment identifier [{fragmentId}]")
-                            .code(Code.INVALID_FRAGMENT_ID)
-                            .argument("fragmentId", fragmentId)
-                            .origin(context.getOrigin())
-                            .build();
-                }
-            }
-            return null;
-        }
-
-        protected void handleParam(String key, String value, Supplier<String> firstParamSupplier,
+        protected void processParam(Map<String, String> params, String key, String value, Supplier<String> firstParamValue,
                 BiConsumer<String, String> paramConsumer) {
-            if (ignoreParameterInit(firstParamSupplier, key, value)) {
+            if (ignoreParameterInit(params, firstParamValue, key, value)) {
                 return;
             } else if (useDefaultedKey(key, value)) {
                 if (LiteralSupport.isStringLiteral(value)) {
@@ -346,11 +318,20 @@ public class IncludeSectionHelper implements SectionHelper {
             return Expressions.splitParts(value).size() == 1 && !WHITESPACE.matcher(value).find();
         }
 
-        protected boolean ignoreParameterInit(Supplier<String> firstParamSupplier, String key, String value) {
+        /**
+         *
+         * @param params
+         * @param firstParamSupplier
+         * @param key
+         * @param value
+         * @return {@code true} if the parameter should not be processed, i.e. registered as an expression
+         */
+        protected boolean ignoreParameterInit(Map<String, String> params, Supplier<String> firstParamSupplier, String key,
+                String value) {
             return key.equals(IGNORE_FRAGMENTS);
         }
 
-        protected abstract T newHelper(Supplier<Template> template, Map<String, Expression> params,
+        protected abstract T newHelper(TemplateSupplier templateSupplier, Map<String, Expression> params,
                 Map<String, SectionBlock> extendingBlocks, Boolean isolatedValue, SectionInitContext context);
     }
 
@@ -369,6 +350,145 @@ public class IncludeSectionHelper implements SectionHelper {
         @Override
         public String getName() {
             return "INCLUDE_" + name();
+        }
+
+    }
+
+    static class FixedTemplateSupplier extends TemplateSupplier {
+
+        private final String templateId;
+        private final String fragmentId;
+        private final Supplier<Template> currentTemplate;
+
+        FixedTemplateSupplier(SectionInitContext context, boolean ignoreFragments, String templateId) {
+            super(context, ignoreFragments);
+            final String fragmentId = getFragmentId(templateId);
+            Supplier<Template> currentTemplate;
+            if (fragmentId != null) {
+                // remove the trailing fragment part
+                templateId = templateId.substring(0, templateId.lastIndexOf('$'));
+                if (templateId.isEmpty()) {
+                    // use the current template
+                    currentTemplate = context.getCurrentTemplate();
+                } else {
+                    currentTemplate = null;
+                }
+            } else {
+                currentTemplate = null;
+            }
+            this.templateId = templateId;
+            this.fragmentId = fragmentId;
+            this.currentTemplate = currentTemplate;
+        }
+
+        @Override
+        Template get(Map<String, Object> params) {
+            return doGet(templateId, fragmentId, currentTemplate);
+        }
+
+    }
+
+    static class DynamicTemplateSupplier extends TemplateSupplier {
+
+        private final Supplier<Template> currentTemplate;
+
+        DynamicTemplateSupplier(SectionInitContext context, boolean ignoreFragments) {
+            super(context, ignoreFragments);
+            this.currentTemplate = context.getCurrentTemplate();
+        }
+
+        @Override
+        Template get(Map<String, Object> params) {
+            Object templateIdVal = params.get(Factory.DYNAMIC_ID);
+            if (templateIdVal == null) {
+                throw engine.error("dynamically included template not found")
+                        .code(Code.TEMPLATE_NOT_FOUND)
+                        .origin(origin)
+                        .build();
+            }
+            String templateId = templateIdVal.toString();
+            final String fragmentId = getFragmentId(templateId);
+            Supplier<Template> currentTemplate;
+            if (fragmentId != null) {
+                // remove the trailing fragment part
+                templateId = templateId.substring(0, templateId.lastIndexOf('$'));
+                if (templateId.isEmpty()) {
+                    // use the current template
+                    currentTemplate = this.currentTemplate;
+                } else {
+                    currentTemplate = null;
+                }
+            } else {
+                currentTemplate = null;
+            }
+            return doGet(templateId, fragmentId, currentTemplate);
+        }
+
+    }
+
+    static abstract class TemplateSupplier {
+
+        protected final Engine engine;
+        protected final Origin origin;
+        protected final boolean ignoreFragments;
+
+        TemplateSupplier(SectionInitContext context, boolean ignoreFragments) {
+            this.engine = context.getEngine();
+            this.origin = context.getOrigin();
+            this.ignoreFragments = ignoreFragments ? true
+                    : Boolean.parseBoolean(context.getParameterOrDefault(AbstractIncludeFactory.IGNORE_FRAGMENTS, "false"));
+        }
+
+        abstract Template get(Map<String, Object> params);
+
+        protected Template doGet(String templateId, String fragmentId, Supplier<Template> currentTemplate) {
+            Template ret;
+            if (currentTemplate != null) {
+                ret = currentTemplate.get();
+            } else {
+                ret = engine.getTemplate(templateId);
+            }
+            if (ret == null) {
+                throw engine.error("included template [{templateId}] not found")
+                        .code(Code.TEMPLATE_NOT_FOUND)
+                        .argument("templateId", templateId)
+                        .origin(origin)
+                        .build();
+            }
+            if (fragmentId != null) {
+                Fragment fragment = ret.getFragment(fragmentId);
+                if (fragment == null) {
+                    throw engine.error("fragment [{fragmentId}] not found in the included template [{templateId}]")
+                            .code(Code.FRAGMENT_NOT_FOUND)
+                            .argument("templateId", templateId)
+                            .argument("fragmentId", fragmentId)
+                            .origin(origin)
+                            .build();
+                }
+                ret = fragment;
+            }
+            return ret;
+        }
+
+        protected String getFragmentId(String templateId) {
+            if (ignoreFragments) {
+                return null;
+            }
+            int idx = templateId.lastIndexOf('$');
+            if (idx != -1) {
+                // the part after the last occurence of a dollar sign is the fragment identifier
+                String fragmentId = templateId.substring(idx + 1, templateId.length());
+                if (FragmentSectionHelper.Factory.FRAGMENT_PATTERN.matcher(fragmentId).matches()) {
+                    return fragmentId;
+                } else {
+                    throw engine.error("invalid fragment identifier [{fragmentId}]")
+                            .code(Code.INVALID_FRAGMENT_ID)
+                            .argument("fragmentId", fragmentId)
+                            .origin(origin)
+                            .build();
+                }
+            }
+            return null;
         }
 
     }
